Fixed: Prehome cover pictures, sub theme pictures stretching

--- a/src/app/pages/prehome/prehome.component.scss
+++ b/src/app/pages/prehome/prehome.component.scss
@@ -158,14 +158,17 @@ $overlayOpacity: .8;
     transform: translate(-50%, -50%);
     z-index: 1;
     position: relative;
+
     img {
       opacity: 0;
+      @include position-absolute($top: 50%, $left: 50%);
       position: absolute;
-      top:0;
-      left: 0;
-      transition: all .5s ease-in-out;
-      width: 100%;
+      width: auto;
       height: 100%;
+      max-width: 100vw;
+      max-height: 100vh;
+      transform: translate(-50%, -50%);
+      transition: all .5s ease-in-out;
 
       &.active {
         opacity: 1;
